# Frigobar

./: .gitignore  pyproject.toml  readme.md
frigobar/: cli.py  frigobar.py
frigobar/_tkinter/: _tkinter.pyd
frigobar/downloaders/: download_pip.ps1  download_python.ps1  download_tkinter.ps1
refrigerator/: cli.py  refrigerator.py
refrigerator/downloaders/: download_deps.ps1  download_pip.ps1  download_python.ps1
tests/: test_frigobar.py  test_refrigerator.py
tests/script_folder/: another_script.py
