[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frigobar"
version = "0"
description = "Distribute Python apps to Windows machines without freezing them."
authors = [
    {name="ubalklen", email="42127323+ubalklen@users.noreply.github.com"},
]
readme = "readme.md"

[project.urls]
"Homepage" = "https://github.com/ubalklen/my_package"
"Bug Tracker" = "https://github.com/ubalklen/my_package/issues"

[project.scripts]
frigobar = "frigobar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["frigobar"]